# rustvof

./: Cargo.toml  DESIGN.md  LICENSE  README.md
examples/: paddle_slope.toml
src/: cell_type.rs  config.rs  fields.rs  lib.rs  main.rs  mesh.rs  properties.rs  simulation.rs
src/boundary/: mod.rs  walls.rs  waves.rs
src/output/: mod.rs  netcdf.rs  probes.rs  vtk.rs
src/solver/: advection.rs  diffusion.rs  mod.rs  pressure.rs  projection.rs  turbulence.rs  vof.rs
